# REINS

./: .gitignore  LICENSE  README.md  create_env.sh  pyproject.toml  run_nc.py  run_qp.py  run_rb.py  submit_nc.py  submit_qp.py  submit_rb.py
experiments/: __init__.py  heuristic.py  nonconvex.py  quadratic.py  rosenbrock.py  sparse.py  utils.py
experiments/math_solver/: __init__.py  abc_solver.py  nonconvex.py  quadratic.py  rosenbrock.py
src/func/: proj.py  rnd.py
src/heuristic/: resolve.py  round.py
src/neuropminlp/: __init__.py  blocks.py  variable.py
src/neuropminlp/projection/: __init__.py  gradient.py
src/neuropminlp/rounding/: __init__.py  base.py  functions.py  selection.py  ste.py  threshold.py
src/neuround/: __init__.py  blocks.py  solver.py
src/neuround/projection/: gradient.py
src/neuround/rounding/: functions.py  gradient.py  selection.py
src/postprocess/: project.py
src/problem/math_solver/: abc_solver.py  nonconvex.py  quadratic.py  rosenbrock.py
src/problem/neuromancer/: nonconvex.py  quadratic.py  rosenbrock.py
src/reins/: __init__.py  blocks.py  loss.py  solver.py  variable.py
src/reins/node/: __init__.py  relaxation.py  smap.py
src/reins/node/rounding/: __init__.py  base.py  functions.py  selection.py  ste.py  threshold.py
src/reins/projection/: __init__.py  gradient.py
src/reins/rounding/: __init__.py  functions.py  selection.py  ste.py  threshold.py
src/utils/: __init__.py
tests/: test_blocks.py  test_package_structure.py  test_projection.py  test_relaxation.py  test_rounding_functions.py  test_rounding_layers.py  test_smap.py  test_solver.py  test_variable.py
