[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reins"
version = "0.0.1"
description = "A learning-to-optimize framework for Mixed-Integer Nonlinear Programming (MINLP)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bo Tang", email = "botang@mie.utoronto.ca" },
]
keywords = ["optimization", "MINLP", "mixed-integer", "nonlinear programming", "learning-to-optimize"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "neuromancer",
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/pnnl/L2O-pMINLP"
Paper = "https://arxiv.org/abs/2410.11061"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
